GS-8461 Correcting header_728x90 ad slot showing extra space in IE on perl pages

--- a/src/webapp/res/css/frame.css
+++ b/src/webapp/res/css/frame.css
@@ -35,6 +35,7 @@ body.unframed #pageGS {
     padding: 7px 0 0 0;
     text-align: center;
     zoom: 1.0;
+    position:absolute;
 }
 
 #contentGS {
@@ -62,4 +63,8 @@ body.unframed #pageGS {
     background-color: #e9e9e9;
     border: 1px solid #bbb;
     text-align: left;
+}
+#adLeaderboard table td.ad object{
+    position:relative;
+    bottom:0;
 }
